assets/style/index.styl
:root
    --raisin-black #1e1e24
    --raisin-black-2 hsl(240, 9%, 17%)
    --cultured #f5f5f5
    --cultured-opaque #f5f5f580
    --red-pigment #e3281e
    --purple #7009a3
    --rainbow-gradient linear-gradient(90deg, var(--purple) 0%, var(--red-pigment) 100%)

body
    font-family 'Lato', sans-serif
    background-color var(--raisin-black)
    color var(--cultured)
    font-weight 300
    font-size 18px
    line-height 25px

.global-container
    min-height 100vh

    @supports (-webkit-hyphens none)
        min-height -webkit-fill-available

.raisin-black
    color var(--raisin-black)

.red-pigment
    color var(--red-pigment)

.bg-cultured
    background-color var(--cultured)

.bg-raisin-black
    background-color var(--raisin-black)

.bg-raisin-black-2
    background-color var(--raisin-black-2)

.h100
    height 100%

*
    box-sizing border-box
    outline none !important

.btn
    border none

    &-primary
        font-size 20px
        font-weight 700
        background var(--purple)
        background var(--rainbow-gradient)

a
    text-decoration none
    color inherit

    &:not(.btn):hover
        opacity 0.8

img
    &.cover
        object-fit cover

    &.contain
        object-fit contain

// Typography
h1, .h1
    font-weight 900

h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6
    font-weight 700

.uppercase
    text-transform uppercase

.font-thin
    font-weight 100

.font-light
    font-weight 300

.font-regular
    font-weight 400

.font-bold
    font-weight 700

.font-black
    font-weight 900

.cursor-pointer
    cursor pointer

b, strong
    font-weight 900

.row-reverse
    flex-direction row-reverse

.opacity-animate
    transition all 1s ease

    &-off
        opacity 0.5
        filter grayscale(0.5)
        transform translateY(100px)

// Nuxt animations
.page-enter-active, .page-leave-active
    transition all 0.4s

.page-enter, .page-leave-to
    opacity 0
    filter blur(1rem)

